serviceforge/grammar/ServiceForgeParser.py
# Generated from ServiceForge.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ServiceForgeParser ( Parser ):

    grammarFileName = "ServiceForge.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'version'", "'='", "'base'", "':'", "','", 
                     "'->'", "'auth'", "'with'", "'('", "')'", "'api'", 
                     "'resource'", "'fields'", "'endpoint'", "'relationship'", 
                     "'GET'", "'POST'", "'PUT'", "'DELETE'", "'PATCH'", 
                     "'int'", "'string'", "'email'", "'boolean'", "'datetime'", 
                     "'decimal'", "'uuid'", "'required'", "'unique'", "'pk'", 
                     "'default'", "'min'", "'max'", "'paginated'", "<INVALID>", 
                     "'has_many'", "'has_one'", "'belongs_to'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "API", "RESOURCE", 
                      "FIELDS", "ENDPOINT", "RELATIONSHIP", "GET", "POST", 
                      "PUT", "DELETE", "PATCH", "INT", "STRING", "EMAIL", 
                      "BOOLEAN", "DATETIME", "DECIMAL", "UUID", "REQUIRED", 
                      "UNIQUE", "PK", "DEFAULT", "MIN", "MAX", "PAGINATED", 
                      "AUTH_TYPE", "HAS_MANY", "HAS_ONE", "BELONGS_TO", 
                      "BOOLEAN_LIT", "VERSION_NUMBER", "NUMBER", "PATH", 
                      "STRING_LITERAL", "IDENTIFIER", "NEWLINE", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_apiBlock = 1
    RULE_apiOption = 2
    RULE_resourceBlock = 3
    RULE_fieldsLine = 4
    RULE_fieldDef = 5
    RULE_dataType = 6
    RULE_fieldModifier = 7
    RULE_endpointLine = 8
    RULE_httpMethod = 9
    RULE_endpointOption = 10
    RULE_returnType = 11
    RULE_returnModifier = 12
    RULE_relationshipLine = 13
    RULE_relType = 14

    ruleNames =  [ "program", "apiBlock", "apiOption", "resourceBlock", 
                   "fieldsLine", "fieldDef", "dataType", "fieldModifier", 
                   "endpointLine", "httpMethod", "endpointOption", "returnType", 
                   "returnModifier", "relationshipLine", "relType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    API=11
    RESOURCE=12
    FIELDS=13
    ENDPOINT=14
    RELATIONSHIP=15
    GET=16
    POST=17
    PUT=18
    DELETE=19
    PATCH=20
    INT=21
    STRING=22
    EMAIL=23
    BOOLEAN=24
    DATETIME=25
    DECIMAL=26
    UUID=27
    REQUIRED=28
    UNIQUE=29
    PK=30
    DEFAULT=31
    MIN=32
    MAX=33
    PAGINATED=34
    AUTH_TYPE=35
    HAS_MANY=36
    HAS_ONE=37
    BELONGS_TO=38
    BOOLEAN_LIT=39
    VERSION_NUMBER=40
    NUMBER=41
    PATH=42
    STRING_LITERAL=43
    IDENTIFIER=44
    NEWLINE=45
    WS=46
    COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ServiceForgeParser.EOF, 0)

        def apiBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.ApiBlockContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.ApiBlockContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ServiceForgeParser.NEWLINE)
            else:
                return self.getToken(ServiceForgeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ServiceForgeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==45:
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11]:
                    self.state = 30
                    self.apiBlock()
                    pass
                elif token in [45]:
                    self.state = 31
                    self.match(ServiceForgeParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(ServiceForgeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApiBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def API(self):
            return self.getToken(ServiceForgeParser.API, 0)

        def IDENTIFIER(self):
            return self.getToken(ServiceForgeParser.IDENTIFIER, 0)

        def EOF(self):
            return self.getToken(ServiceForgeParser.EOF, 0)

        def apiOption(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.ApiOptionContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.ApiOptionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ServiceForgeParser.NEWLINE)
            else:
                return self.getToken(ServiceForgeParser.NEWLINE, i)

        def resourceBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.ResourceBlockContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.ResourceBlockContext,i)


        def getRuleIndex(self):
            return ServiceForgeParser.RULE_apiBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApiBlock" ):
                listener.enterApiBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApiBlock" ):
                listener.exitApiBlock(self)




    def apiBlock(self):

        localctx = ServiceForgeParser.ApiBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_apiBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(ServiceForgeParser.API)
            self.state = 40
            self.match(ServiceForgeParser.IDENTIFIER)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==3:
                self.state = 41
                self.apiOption()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                self.state = 48 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 47
                        self.match(ServiceForgeParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 50 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 52
                    self.resourceBlock()
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [-1]:
                self.state = 58
                self.match(ServiceForgeParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApiOptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION_NUMBER(self):
            return self.getToken(ServiceForgeParser.VERSION_NUMBER, 0)

        def PATH(self):
            return self.getToken(ServiceForgeParser.PATH, 0)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_apiOption

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApiOption" ):
                listener.enterApiOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApiOption" ):
                listener.exitApiOption(self)




    def apiOption(self):

        localctx = ServiceForgeParser.ApiOptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_apiOption)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(ServiceForgeParser.T__0)
                self.state = 62
                self.match(ServiceForgeParser.T__1)
                self.state = 63
                self.match(ServiceForgeParser.VERSION_NUMBER)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(ServiceForgeParser.T__2)
                self.state = 65
                self.match(ServiceForgeParser.T__1)
                self.state = 66
                self.match(ServiceForgeParser.PATH)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RESOURCE(self):
            return self.getToken(ServiceForgeParser.RESOURCE, 0)

        def IDENTIFIER(self):
            return self.getToken(ServiceForgeParser.IDENTIFIER, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ServiceForgeParser.NEWLINE)
            else:
                return self.getToken(ServiceForgeParser.NEWLINE, i)

        def fieldsLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.FieldsLineContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.FieldsLineContext,i)


        def endpointLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.EndpointLineContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.EndpointLineContext,i)


        def relationshipLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.RelationshipLineContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.RelationshipLineContext,i)


        def getRuleIndex(self):
            return ServiceForgeParser.RULE_resourceBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceBlock" ):
                listener.enterResourceBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceBlock" ):
                listener.exitResourceBlock(self)




    def resourceBlock(self):

        localctx = ServiceForgeParser.ResourceBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_resourceBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ServiceForgeParser.RESOURCE)
            self.state = 70
            self.match(ServiceForgeParser.IDENTIFIER)
            self.state = 72 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 71
                    self.match(ServiceForgeParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 74 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [13]:
                        self.state = 76
                        self.fieldsLine()
                        pass
                    elif token in [14]:
                        self.state = 77
                        self.endpointLine()
                        pass
                    elif token in [15]:
                        self.state = 78
                        self.relationshipLine()
                        pass
                    elif token in [45]:
                        self.state = 79
                        self.match(ServiceForgeParser.NEWLINE)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldsLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIELDS(self):
            return self.getToken(ServiceForgeParser.FIELDS, 0)

        def fieldDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.FieldDefContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.FieldDefContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ServiceForgeParser.NEWLINE)
            else:
                return self.getToken(ServiceForgeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_fieldsLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldsLine" ):
                listener.enterFieldsLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldsLine" ):
                listener.exitFieldsLine(self)




    def fieldsLine(self):

        localctx = ServiceForgeParser.FieldsLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fieldsLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(ServiceForgeParser.FIELDS)
            self.state = 86
            self.match(ServiceForgeParser.T__3)
            self.state = 87
            self.fieldDef()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 88
                self.match(ServiceForgeParser.T__4)
                self.state = 89
                self.fieldDef()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 95
                    self.match(ServiceForgeParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 98 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ServiceForgeParser.IDENTIFIER, 0)

        def dataType(self):
            return self.getTypedRuleContext(ServiceForgeParser.DataTypeContext,0)


        def fieldModifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.FieldModifierContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.FieldModifierContext,i)


        def getRuleIndex(self):
            return ServiceForgeParser.RULE_fieldDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDef" ):
                listener.enterFieldDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDef" ):
                listener.exitFieldDef(self)




    def fieldDef(self):

        localctx = ServiceForgeParser.FieldDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fieldDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ServiceForgeParser.IDENTIFIER)
            self.state = 101
            self.dataType()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16911433728) != 0):
                self.state = 102
                self.fieldModifier()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ServiceForgeParser.INT, 0)

        def STRING(self):
            return self.getToken(ServiceForgeParser.STRING, 0)

        def EMAIL(self):
            return self.getToken(ServiceForgeParser.EMAIL, 0)

        def BOOLEAN(self):
            return self.getToken(ServiceForgeParser.BOOLEAN, 0)

        def DATETIME(self):
            return self.getToken(ServiceForgeParser.DATETIME, 0)

        def DECIMAL(self):
            return self.getToken(ServiceForgeParser.DECIMAL, 0)

        def UUID(self):
            return self.getToken(ServiceForgeParser.UUID, 0)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = ServiceForgeParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 266338304) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRED(self):
            return self.getToken(ServiceForgeParser.REQUIRED, 0)

        def UNIQUE(self):
            return self.getToken(ServiceForgeParser.UNIQUE, 0)

        def PK(self):
            return self.getToken(ServiceForgeParser.PK, 0)

        def DEFAULT(self):
            return self.getToken(ServiceForgeParser.DEFAULT, 0)

        def NUMBER(self):
            return self.getToken(ServiceForgeParser.NUMBER, 0)

        def STRING_LITERAL(self):
            return self.getToken(ServiceForgeParser.STRING_LITERAL, 0)

        def BOOLEAN_LIT(self):
            return self.getToken(ServiceForgeParser.BOOLEAN_LIT, 0)

        def MIN(self):
            return self.getToken(ServiceForgeParser.MIN, 0)

        def MAX(self):
            return self.getToken(ServiceForgeParser.MAX, 0)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_fieldModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldModifier" ):
                listener.enterFieldModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldModifier" ):
                listener.exitFieldModifier(self)




    def fieldModifier(self):

        localctx = ServiceForgeParser.FieldModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fieldModifier)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(ServiceForgeParser.REQUIRED)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(ServiceForgeParser.UNIQUE)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(ServiceForgeParser.PK)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.match(ServiceForgeParser.DEFAULT)
                self.state = 114
                self.match(ServiceForgeParser.T__1)
                self.state = 115
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 11544872091648) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.match(ServiceForgeParser.MIN)
                self.state = 117
                self.match(ServiceForgeParser.T__1)
                self.state = 118
                self.match(ServiceForgeParser.NUMBER)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 6)
                self.state = 119
                self.match(ServiceForgeParser.MAX)
                self.state = 120
                self.match(ServiceForgeParser.T__1)
                self.state = 121
                self.match(ServiceForgeParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndpointLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDPOINT(self):
            return self.getToken(ServiceForgeParser.ENDPOINT, 0)

        def httpMethod(self):
            return self.getTypedRuleContext(ServiceForgeParser.HttpMethodContext,0)


        def PATH(self):
            return self.getToken(ServiceForgeParser.PATH, 0)

        def returnType(self):
            return self.getTypedRuleContext(ServiceForgeParser.ReturnTypeContext,0)


        def EOF(self):
            return self.getToken(ServiceForgeParser.EOF, 0)

        def endpointOption(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ServiceForgeParser.EndpointOptionContext)
            else:
                return self.getTypedRuleContext(ServiceForgeParser.EndpointOptionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ServiceForgeParser.NEWLINE)
            else:
                return self.getToken(ServiceForgeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_endpointLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndpointLine" ):
                listener.enterEndpointLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndpointLine" ):
                listener.exitEndpointLine(self)




    def endpointLine(self):

        localctx = ServiceForgeParser.EndpointLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_endpointLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ServiceForgeParser.ENDPOINT)
            self.state = 125
            self.httpMethod()
            self.state = 126
            self.match(ServiceForgeParser.PATH)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179869568) != 0):
                self.state = 127
                self.endpointOption()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(ServiceForgeParser.T__5)
            self.state = 134
            self.returnType()
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                self.state = 136 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 135
                        self.match(ServiceForgeParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 138 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                pass
            elif token in [-1]:
                self.state = 140
                self.match(ServiceForgeParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HttpMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GET(self):
            return self.getToken(ServiceForgeParser.GET, 0)

        def POST(self):
            return self.getToken(ServiceForgeParser.POST, 0)

        def PUT(self):
            return self.getToken(ServiceForgeParser.PUT, 0)

        def DELETE(self):
            return self.getToken(ServiceForgeParser.DELETE, 0)

        def PATCH(self):
            return self.getToken(ServiceForgeParser.PATCH, 0)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_httpMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHttpMethod" ):
                listener.enterHttpMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHttpMethod" ):
                listener.exitHttpMethod(self)




    def httpMethod(self):

        localctx = ServiceForgeParser.HttpMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_httpMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2031616) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndpointOptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTH_TYPE(self):
            return self.getToken(ServiceForgeParser.AUTH_TYPE, 0)

        def IDENTIFIER(self):
            return self.getToken(ServiceForgeParser.IDENTIFIER, 0)

        def PAGINATED(self):
            return self.getToken(ServiceForgeParser.PAGINATED, 0)

        def getRuleIndex(self):
            return ServiceForgeParser.RULE_endpointOption

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndpointOption" ):
                listener.enterEndpointOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndpointOption" ):
                listener.exitEndpointOption(self)




    def endpointOption(self):
